--- a/Matchismore/MainStoryboard.storyboard
+++ b/Matchismore/MainStoryboard.storyboard
@@ -12,36 +12,13 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rE1-0d-l7m">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="81" id="Zmm-b2-367"/>
-                                    <constraint firstAttribute="height" constant="50" id="evF-4N-bhV"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="New Game">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="dealNewGame" destination="06F-SM-KIy" eventType="touchUpInside" id="p6t-vb-MwE"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Score: 0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ucc-Un-k8u">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="96" id="1Sm-YS-fKg"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z5H-tf-WaK">
                                 <color key="backgroundColor" red="0.0" green="0.50226247000000002" blue="0.0052738524999999996" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="319" id="o39-Fc-Ixx"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GfB-so-P5S">
                                     <size key="itemSize" width="100" height="64"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -81,10 +58,11 @@
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MRp-Uy-lVu">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="73" id="L6Q-Zw-Seh"/>
+                                    <constraint firstAttribute="width" constant="86" id="cnp-bB-wub"/>
+                                    <constraint firstAttribute="height" constant="33" id="rTi-ot-nh2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="3 Cards">
+                                <state key="normal" title="+3 Cards">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -96,30 +74,88 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="heP-Jd-826">
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fx-84-cZp">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28" id="JQN-Hj-MMl"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2lV-hH-t1a">
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QtC-7t-b1X">
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZaW-3z-s8v">
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="2lV-hH-t1a" firstAttribute="leading" secondItem="heP-Jd-826" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="2dw-D9-hRS"/>
+                                    <constraint firstItem="ZaW-3z-s8v" firstAttribute="top" secondItem="heP-Jd-826" secondAttribute="top" type="default" id="6P2-zE-Slm"/>
+                                    <constraint firstItem="ZaW-3z-s8v" firstAttribute="leading" secondItem="heP-Jd-826" secondAttribute="leading" constant="128" id="FsG-AY-4vj"/>
+                                    <constraint firstAttribute="bottom" secondItem="9fx-84-cZp" secondAttribute="bottom" constant="4" id="Gno-6e-X16"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZaW-3z-s8v" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="QeP-Lb-7RW"/>
+                                    <constraint firstItem="9fx-84-cZp" firstAttribute="leading" secondItem="heP-Jd-826" secondAttribute="leading" type="default" id="Wwc-zt-jly"/>
+                                    <constraint firstItem="9fx-84-cZp" firstAttribute="top" secondItem="QtC-7t-b1X" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ZyV-ih-67x"/>
+                                    <constraint firstItem="9fx-84-cZp" firstAttribute="top" secondItem="ZaW-3z-s8v" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="bQZ-Eh-5Mf"/>
+                                    <constraint firstAttribute="trailing" secondItem="2lV-hH-t1a" secondAttribute="trailing" constant="128" id="cKH-FV-eHj"/>
+                                    <constraint firstItem="9fx-84-cZp" firstAttribute="trailing" secondItem="heP-Jd-826" secondAttribute="trailing" type="default" id="eOQ-C9-pkL"/>
+                                    <constraint firstItem="9fx-84-cZp" firstAttribute="centerX" secondItem="QtC-7t-b1X" secondAttribute="centerX" type="default" id="eOs-U1-JwN"/>
+                                    <constraint firstItem="QtC-7t-b1X" firstAttribute="leading" secondItem="heP-Jd-826" secondAttribute="leading" constant="74" id="i7Y-Xo-6YJ"/>
+                                    <constraint firstItem="QtC-7t-b1X" firstAttribute="top" secondItem="heP-Jd-826" secondAttribute="top" type="default" id="j7i-MV-W03"/>
+                                    <constraint firstItem="2lV-hH-t1a" firstAttribute="top" secondItem="heP-Jd-826" secondAttribute="top" constant="1" id="k3J-Bo-Ap6"/>
+                                    <constraint firstAttribute="bottom" secondItem="2lV-hH-t1a" secondAttribute="bottom" constant="39" id="qtw-5f-Gar"/>
+                                </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YLF-0h-OF9">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="aAH-Ho-5bV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="New Game">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="dealNewGame" destination="06F-SM-KIy" eventType="touchUpInside" id="PxQ-mm-A1x"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="MRp-Uy-lVu" firstAttribute="top" secondItem="z5H-tf-WaK" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="59u-fA-km0"/>
-                            <constraint firstItem="MRp-Uy-lVu" firstAttribute="leading" secondItem="usL-q4-HdC" secondAttribute="leading" constant="146" id="Dhu-8Z-Bnp"/>
-                            <constraint firstItem="heP-Jd-826" firstAttribute="top" secondItem="z5H-tf-WaK" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ENe-j4-7mY"/>
+                            <constraint firstItem="YLF-0h-OF9" firstAttribute="leading" secondItem="Ucc-Un-k8u" secondAttribute="leading" type="default" id="0g4-nN-3rK"/>
+                            <constraint firstItem="MRp-Uy-lVu" firstAttribute="top" secondItem="z5H-tf-WaK" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="9X2-fi-A8r"/>
+                            <constraint firstAttribute="trailing" secondItem="YLF-0h-OF9" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="EET-KB-ATt"/>
+                            <constraint firstAttribute="trailing" secondItem="MRp-Uy-lVu" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Gb8-41-lA5"/>
                             <constraint firstAttribute="trailing" secondItem="Ucc-Un-k8u" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Hdx-PN-63F"/>
                             <constraint firstItem="heP-Jd-826" firstAttribute="leading" secondItem="usL-q4-HdC" secondAttribute="leading" constant="6" id="MAC-Ie-fSa"/>
-                            <constraint firstItem="rE1-0d-l7m" firstAttribute="top" secondItem="z5H-tf-WaK" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="NOD-0T-aYp"/>
+                            <constraint firstItem="YLF-0h-OF9" firstAttribute="leading" secondItem="MRp-Uy-lVu" secondAttribute="leading" type="default" id="QhU-Ax-8Xk"/>
                             <constraint firstItem="z5H-tf-WaK" firstAttribute="trailing" secondItem="usL-q4-HdC" secondAttribute="trailing" type="default" id="V1H-6s-uPl"/>
-                            <constraint firstItem="MRp-Uy-lVu" firstAttribute="bottom" secondItem="Ucc-Un-k8u" secondAttribute="bottom" type="default" id="XEO-GI-axZ"/>
+                            <constraint firstItem="heP-Jd-826" firstAttribute="bottom" secondItem="Ucc-Un-k8u" secondAttribute="bottom" type="default" id="W45-h5-wdZ"/>
                             <constraint firstItem="z5H-tf-WaK" firstAttribute="top" secondItem="usL-q4-HdC" secondAttribute="top" type="default" id="Xfd-7f-Rgb"/>
-                            <constraint firstItem="MRp-Uy-lVu" firstAttribute="leading" secondItem="heP-Jd-826" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="cYe-G6-ucD"/>
-                            <constraint firstItem="rE1-0d-l7m" firstAttribute="leading" secondItem="MRp-Uy-lVu" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="etM-Dn-oVZ"/>
-                            <constraint firstItem="MRp-Uy-lVu" firstAttribute="bottom" secondItem="heP-Jd-826" secondAttribute="bottom" type="default" id="g88-1r-pgF"/>
-                            <constraint firstItem="Ucc-Un-k8u" firstAttribute="top" secondItem="rE1-0d-l7m" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="pHs-MZ-iMf"/>
+                            <constraint firstItem="Ucc-Un-k8u" firstAttribute="top" secondItem="YLF-0h-OF9" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="dCs-Hq-DGQ"/>
+                            <constraint firstItem="heP-Jd-826" firstAttribute="top" secondItem="usL-q4-HdC" secondAttribute="top" constant="300" id="etD-wq-XyL"/>
+                            <constraint firstAttribute="trailing" secondItem="heP-Jd-826" secondAttribute="trailing" constant="124" id="k0N-Cd-8Gd"/>
+                            <constraint firstAttribute="bottom" secondItem="heP-Jd-826" secondAttribute="bottom" constant="5" id="kNd-Ws-WLO"/>
+                            <constraint firstItem="heP-Jd-826" firstAttribute="top" secondItem="z5H-tf-WaK" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="kvL-dL-Pj1"/>
                             <constraint firstItem="z5H-tf-WaK" firstAttribute="leading" secondItem="usL-q4-HdC" secondAttribute="leading" type="default" id="q80-Zx-XNc"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Set" image="SetTabIcon.png" id="WHB-G5-rRt"/>
                     <connections>
                         <outlet property="cardCollectionView" destination="z5H-tf-WaK" id="EKI-1s-iCL"/>
+                        <outlet property="cardView1" destination="2lV-hH-t1a" id="diK-y3-R9h"/>
+                        <outlet property="cardView2" destination="QtC-7t-b1X" id="ioh-f7-ZVC"/>
+                        <outlet property="cardView3" destination="ZaW-3z-s8v" id="1GS-yG-HKz"/>
+                        <outlet property="descriptionLabel" destination="9fx-84-cZp" id="tIP-eo-ed0"/>
                         <outlet property="descriptionView" destination="heP-Jd-826" id="zGK-UL-xzh"/>
                         <outlet property="scoreLabel" destination="Ucc-Un-k8u" id="SCg-9S-I0P"/>
                     </connections>
@@ -391,6 +427,10 @@
         <class className="SetGameViewController" superclassName="CardGameViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SetGameViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="cardView1" candidateClass="UIView"/>
+                <relationship kind="outlet" name="cardView2" candidateClass="UIView"/>
+                <relationship kind="outlet" name="cardView3" candidateClass="UIView"/>
+                <relationship kind="outlet" name="descriptionLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="descriptionView" candidateClass="UIView"/>
             </relationships>
         </class>
